# sample-manager

./: .gitignore  PLAN.md  README.md  pants.toml
apps/classifier/: PLAN.md  pyproject.toml
lib/data/: label_audio.ipynb  pyproject.toml
