[project]
name = "classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishi Khiroya",email = "rishi@vrish.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
